@@ -1,3 +1,8 @@
+2014-08-26  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Improve LHAGlue info messages to not specify that particular
+	generators are being used.
+
 2014-08-19  Andy Buckley  <andy.buckley@cern.ch>
 
 	* LHAPDF 6.1.4 release
